<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".Authentication.SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="88dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/ws_logo_blue" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UserMail_layout_login"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="600dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:hint="@string/username"
        android:layout_centerHorizontal="true"
        app:boxStrokeColor="@color/black"
        android:layout_below="@id/imageView"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stu_mail_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_below="@+id/UserMail_layout_login"
        android:layout_width="600dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="196dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/black"
        >
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditText_login_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password_layout"
        android:layout_marginTop="-30dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />


    <Button
        android:id="@+id/LoginButton"
        android:layout_width="302dp"
        android:layout_height="53dp"
        android:layout_marginTop="-150dp"
        android:onClick="registerPage"
        android:text="@string/button_text"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Password_layout"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="4dp"
        android:layout_marginLeft="40dp"
        android:text="@string/new_user_si"
        android:layout_below="@id/LoginButton"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/new_user_si"
        android:textColor="@color/md_theme_light_onSurface"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="4dp"
        android:minHeight="48dp"
        android:onClick="registerPage"
        android:text="Sign Up"
        android:layout_below="@id/LoginButton"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="225dp"
        android:textAppearance="@style/signup"


        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="174dp" />
</RelativeLayout>