<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.SignUpActivity">


    <TextView
        android:layout_width="240dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:gravity="top"
        android:lineSpacingExtra="-5sp"
        android:text="@string/create_an_a"
        android:textAlignment="center"
        android:textAppearance="@style/create_an_a"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/Username_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883"
        tools:ignore="RtlCompat"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Username_layout"
        android:layout_width="316dp"
        android:layout_height="89dp"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/StudentNumber_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutPassword"
        android:layout_width="318dp"
        android:layout_height="82dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/Password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="149dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="56dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/old_user"
        android:textAppearance="@style/new_user_si"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <TextView
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="4sp"
        android:onClick="loginPage"
        android:text="@string/signin"
        android:textAppearance="@style/signup"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        app:layout_constraintVertical_bias="0.179" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/ws_logo_blue" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="312dp"
        android:layout_height="52dp"

        android:layout_marginBottom="100dp"
        android:text="@string/registerbutton_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/StudentNumber_layout"
        android:layout_width="317dp"
        android:layout_height="93dp"
        android:hint="@string/studentnumber"
        app:layout_constraintBottom_toTopOf="@+id/LayoutPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/StudentNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>